--- a/_posts/2013-09-14-the-race.md
+++ b/_posts/2013-09-14-the-race.md
@@ -20,6 +20,6 @@ Most of my CS friends are likely to know Git. However, many of them (well, inclu
 
 I believe that by deeply understanding all CS basics, we can accelerate mastering any new technology much faster. Recently, I came across [this article](http://venturebeat.com/2013/09/11/peter-thiel-promised-flying-cars-instead-we-got-caffeine-spray/#Dkb43bBoIXhyj30F.99). In my opinion, blindly dropping out is not a good idea. We may miss some opportunities while sitting at universities, but on the other hand we also can gain so much skill/knowledge that turn out to be very useful for later career. Of course, we have extremely successful examples of dropping out: Bill Gates, Steve Job or Mark Zuckerberg. But what's the rate? They are literally ones in billions.
 
-So stay at school, learn as much as you can. Learn to make a wheel, create an engine, and combine them to make your own car. Then back to the race with much more advantages.
+So better stay at school, learn as much as you can. Learn to make a wheel, create an engine, and combine them to make your own car. Then back to the race with much more advantages.
 
 <small><i>From a guy who is being pissed off by his rusty Rails skill.</i></small>
